# Mini-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
cmake/: EmscriptenToolchain.cmake
docs/: AAA_UPGRADE_ROADMAP.md  BUILD_GUIDE.md  CHANGELOG_FDF_INTEGRATION.md  EVOLUTION.md  GAME_LOGIC_ARCHITECTURE.md  GAME_LOGIC_SUMMARY.md  GAME_LOGIC_USAGE.md  GAP_ANALYSIS.md  IMGUI_INTEGRATION.md  NETWORK_INTEGRATION_POINTS.md  PROJECT_ROADMAP.md  README.md  SHADOW_RENDERING_TROUBLESHOOTING.md  SUMMARY.md  TROUBLESHOOTING.md  TROUBLESHOOTING_KR.md  WASM_TROUBLESHOOTING.md
docs/features/: GPU_INSTANCING.md
docs/game_logic/: GAME_LOGIC_USAGE.md  GAP_ANALYSIS.md  NETWORK_INTEGRATION_POINTS.md  SRS.md
docs/refactoring/: ARCHITECTURE_ANALYSIS.md  PHASE1_UTILITY_LAYER.md  PHASE2_DEVICE_MANAGEMENT.md  PHASE3_RESOURCE_MANAGEMENT.md  PHASE4_RENDERING_LAYER.md  PHASE5_SCENE_LAYER.md  PHASE6_RENDERER_INTEGRATION.md  PHASE7_APPLICATION_LAYER.md  PHASE8_SUBSYSTEM_SEPARATION.md  REFACTORING_OVERVIEW.md  REFACTORING_OVERVIEW_KR.md
docs/refactoring/aaa-upgrade/: AAA_UPGRADE_ROADMAP.md
docs/refactoring/layered-to-rhi/: ARCHITECTURE.md  LEGACY_CODE_REFERENCE.md  PHASE1_SUMMARY.md  (+22 more)
models/fdf/: pyramid.fdf  test.fdf
scripts/: setup_emscripten.sh
shaders/: brdf_lut.comp.glsl  brdf_lut.comp.wgsl  building.frag.glsl  building.vert.glsl  building.wgsl  dual_light_pbr.frag.glsl  dual_light_pbr.vert.glsl  equirect_to_cubemap.comp.glsl  equirect_to_cubemap.comp.wgsl  fdf.slang  fdf.spv  frustum_cull.comp.glsl  frustum_cull.comp.wgsl  instancing_test.frag.glsl  instancing_test.frag.spv  instancing_test.frag.wgsl  instancing_test.vert.glsl  instancing_test.vert.spv  instancing_test.vert.wgsl  irradiance_map.comp.glsl  irradiance_map.comp.wgsl  particle.frag.glsl  particle.vert.glsl  particle.wgsl  pbr_sphere.frag.glsl  pbr_sphere.vert.glsl  prefilter_env.comp.glsl  prefilter_env.comp.wgsl  shadow.frag.glsl  shadow.vert.glsl  shadow.wgsl  skybox.frag.glsl  skybox.vert.glsl  skybox.wgsl
src/: Application.cpp  Application.hpp
src/core/: CommandManager.hpp  VulkanDevice.cpp  VulkanDevice.hpp
src/effects/: Particle.hpp  ParticleRenderer.cpp  ParticleRenderer.hpp  ParticleSystem.cpp  ParticleSystem.hpp
src/examples/: InstancingTest.cpp  InstancingTest.hpp
src/loaders/: FDFLoader.cpp  FDFLoader.hpp  OBJLoader.cpp
src/rendering/: BatchRenderer.cpp  BatchRenderer.hpp  IBLManager.cpp  IBLManager.hpp  InstancedRenderData.hpp  Renderer.cpp  Renderer.hpp  RendererBridge.cpp  RendererBridge.hpp  ShadowRenderer.cpp  ShadowRenderer.hpp  SkyboxRenderer.cpp  SkyboxRenderer.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp
src/resources/: ResourceManager.cpp  ResourceManager.hpp
src/rhi/: CMakeLists.txt  RHI.hpp  RHIBuffer.hpp  RHICapabilities.hpp  RHICommandBuffer.hpp  RHIFactory.cpp  RHIFactory.hpp  RHIPipeline.hpp  RHIQueue.hpp  RHIRenderPass.hpp  RHIShader.hpp  RHISwapchain.hpp  RHISync.hpp  RHITypes.hpp
src/rhi-vulkan/: CMakeLists.txt
src/rhi-vulkan/include/rhi-vulkan/: VulkanCommon.hpp  VulkanRHIBuffer.hpp  VulkanRHICommandEncoder.hpp  VulkanRHIPipeline.hpp  VulkanRHISwapchain.hpp  VulkanRHISync.hpp
src/rhi-vulkan/src/: VulkanCommon.cpp  VulkanRHIBindGroup.cpp  VulkanRHIBuffer.cpp  VulkanRHICapabilities.cpp  VulkanRHICommandEncoder.cpp  VulkanRHIDevice.cpp  VulkanRHIPipeline.cpp  VulkanRHIQueue.cpp  VulkanRHISampler.cpp  VulkanRHIShader.cpp  VulkanRHISwapchain.cpp  VulkanRHISync.cpp  VulkanRHITexture.cpp
src/rhi-webgpu/: CMakeLists.txt
src/rhi/backends/vulkan/: CMakeLists.txt
src/rhi/backends/vulkan/include/rhi/vulkan/: VulkanRHIBindGroup.hpp  VulkanRHICommandEncoder.hpp  VulkanRHIDevice.hpp  VulkanRHIPipeline.hpp  VulkanRHISampler.hpp  VulkanRHISwapchain.hpp  VulkanRHISync.hpp  VulkanRHITexture.hpp
src/rhi/backends/vulkan/src/: VulkanCommon.cpp  VulkanRHIBindGroup.cpp  VulkanRHIBuffer.cpp  VulkanRHICapabilities.cpp  VulkanRHICommandEncoder.cpp  VulkanRHIDevice.cpp  VulkanRHIPipeline.cpp  VulkanRHIQueue.cpp  VulkanRHISampler.cpp  VulkanRHIShader.cpp  VulkanRHISwapchain.cpp  VulkanRHISync.cpp  VulkanRHITexture.cpp
src/rhi/backends/webgpu/: CMakeLists.txt
src/rhi/backends/webgpu/include/rhi/webgpu/: WebGPUCommon.hpp  WebGPURHICapabilities.hpp  WebGPURHICommandEncoder.hpp  WebGPURHIPipeline.hpp  WebGPURHISwapchain.hpp  WebGPURHISync.hpp  WebGPURHITexture.hpp
src/rhi/backends/webgpu/src/: WebGPUCommon.cpp  WebGPURHIBindGroup.cpp  WebGPURHIBuffer.cpp  WebGPURHICapabilities.cpp  WebGPURHICommandEncoder.cpp  WebGPURHIDevice.cpp  WebGPURHIPipeline.cpp  WebGPURHIQueue.cpp  WebGPURHISampler.cpp  WebGPURHIShader.cpp  WebGPURHISwapchain.cpp  WebGPURHISync.cpp  WebGPURHITexture.cpp
src/rhi/include/rhi/: Forward.hpp  RHI.hpp  RHIBindGroup.hpp  RHIBuffer.hpp  RHICapabilities.hpp  RHICommandBuffer.hpp  RHIDevice.hpp  RHIPipeline.hpp  RHIQueue.hpp  RHIRenderPass.hpp  RHISampler.hpp  RHIShader.hpp  RHISwapchain.hpp  RHISync.hpp  RHITexture.hpp  RHITypes.hpp
src/rhi/src/: RHIFactory.cpp  RHIFactory.hpp
src/rhi/vulkan/: VulkanCommon.cpp  VulkanCommon.hpp  VulkanMemoryAllocator.cpp  VulkanRHIBindGroup.cpp  VulkanRHIBuffer.cpp  VulkanRHIBuffer.hpp  VulkanRHICapabilities.cpp  VulkanRHICapabilities.hpp  VulkanRHICommandEncoder.cpp  VulkanRHICommandEncoder.hpp  VulkanRHIDevice.cpp  VulkanRHIDevice.hpp  VulkanRHIPipeline.cpp  VulkanRHIPipeline.hpp  VulkanRHIQueue.cpp  VulkanRHIQueue.hpp  VulkanRHISampler.cpp  VulkanRHIShader.cpp  VulkanRHIShader.hpp  VulkanRHISwapchain.cpp  VulkanRHISwapchain.hpp  VulkanRHISync.cpp  VulkanRHITexture.cpp  VulkanRHITexture.hpp
src/scene/: AABB.hpp  Camera.cpp  Camera.hpp  Frustum.hpp  Mesh.cpp  Mesh.hpp  Quadtree.cpp  Quadtree.hpp  SceneGraph.cpp  SceneGraph.hpp  SceneManager.cpp  SceneManager.hpp  SceneNode.cpp  SceneNode.hpp  SectorNode.cpp  SectorNode.hpp
src/ui/: ImGuiBackend.hpp  ImGuiManager.cpp  ImGuiManager.hpp  ImGuiVulkanBackend.cpp  ImGuiVulkanBackend.hpp
src/utils/: GpuProfiler.cpp  GpuProfiler.hpp  Logger.hpp  Vertex.hpp
tests/: dual_light_demo.cpp  instancing_test_main.cpp  pbr_demo.cpp  rhi_smoke_test.cpp  wasm_shell.html
(+57 files in other folders)
